// src/main/java/org/example/arcade/model/GameType.java
package org.example.arcade.model;

public enum GameType {
    REINAS,
    KNIGHT,
    HANOI
}
